// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`procedure-preference GET /change should render the change procedure preference page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> How would you prefer us to decide your appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio" name="procedurePreferenceRadio"
                                        type="radio" value="written">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-2" name="procedurePreferenceRadio"
                                        type="radio" value="hearing">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-2">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-3" name="procedurePreferenceRadio"
                                        type="radio" value="inquiry">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-3">Inquiry</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /change should render the change procedure preference page with the expected content if appellantProcedurePreference is "hearing" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> How would you prefer us to decide your appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio" name="procedurePreferenceRadio"
                                        type="radio" value="written">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-2" name="procedurePreferenceRadio"
                                        type="radio" value="hearing" checked>
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-2">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-3" name="procedurePreferenceRadio"
                                        type="radio" value="inquiry">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-3">Inquiry</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /change should render the change procedure preference page with the expected content if appellantProcedurePreference is "inquiry" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> How would you prefer us to decide your appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio" name="procedurePreferenceRadio"
                                        type="radio" value="written">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-2" name="procedurePreferenceRadio"
                                        type="radio" value="hearing">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-2">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-3" name="procedurePreferenceRadio"
                                        type="radio" value="inquiry" checked>
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-3">Inquiry</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /change should render the change procedure preference page with the expected content if appellantProcedurePreference is "written" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> How would you prefer us to decide your appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio" name="procedurePreferenceRadio"
                                        type="radio" value="written" checked>
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-2" name="procedurePreferenceRadio"
                                        type="radio" value="hearing">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-2">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="procedure-preference-radio-3" name="procedurePreferenceRadio"
                                        type="radio" value="inquiry">
                                        <label class="govuk-label govuk-radios__label" for="procedure-preference-radio-3">Inquiry</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /details/change should render the change reason for preference page with "procedurePreferenceDetailsTextarea" textarea populated with the expected content if appellantProcedurePreferenceDetails is populated in the appellant case data 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-details-textarea"> Why would you prefer this appeal procedure?</label></h1>
                            <textarea class="govuk-textarea" id="procedure-preference-details-textarea"
                            name="procedurePreferenceDetailsTextarea" rows="5">Example procedure preference details text</textarea>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /details/change should render the change reason for preference page with "procedurePreferenceDetailsTextarea" textarea unpopulated if appellantProcedurePreferenceDetails is not populated in the appellant case data 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-details-textarea"> Why would you prefer this appeal procedure?</label></h1>
                            <textarea class="govuk-textarea" id="procedure-preference-details-textarea"
                            name="procedurePreferenceDetailsTextarea" rows="5"></textarea>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /duration/change should render the change expected length of procedure page with "procedurePreferenceDurationInput" text input unpopulated if appellantProcedurePreferenceDuration is not populated in the appellant case data 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference GET /inquiry/witnesses/change should render the change expected number of witnesses page with "inquiryNumberOfWitnessesInput" text input unpopulated if appellantProcedurePreferenceWitnessCount is not populated in the appellant case data 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="inquiry-number-of-witnesses"> How many witnesses would you expect to give evidence at the inquiry?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="inquiry-number-of-witnesses"
                            name="inquiryNumberOfWitnessesInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /details/change should re-render the change reason for preference page with the expected error message if "procedurePreferenceDetailsTextarea" textarea contains more than 1000 characters 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#procedure-preference-duration-input">Enter the expected length of procedure</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /duration/change should re-render the change expected length of procedure page with the expected error message if "procedurePreferenceDurationInput" text input is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#procedure-preference-duration-input">Enter the expected length of procedure</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /duration/change should re-render the change expected length of procedure page with the expected error message if "procedurePreferenceDurationInput" text input is greater than 99 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#procedure-preference-duration-input">Expected length of procedure must be a number between 0 and 99</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /duration/change should re-render the change expected length of procedure page with the expected error message if "procedurePreferenceDurationInput" text input is less than 0 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#procedure-preference-duration-input">Expected length of procedure must be a number between 0 and 99</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /duration/change should re-render the change expected length of procedure page with the expected error message if "procedurePreferenceDurationInput" text input is non-numeric 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#procedure-preference-duration-input">Expected length of procedure must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="procedure-preference-duration"> How many days would you expect the inquiry to last?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="procedure-preference-duration"
                            name="procedurePreferenceDurationInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /inquiry/witnesses/change should re-render the change expected number of witnesses page with the expected error message if "inquiryNumberOfWitnessesInput" text input is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inquiry-number-of-witnesses-input">Enter the expected number of witnesses</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="inquiry-number-of-witnesses"> How many witnesses would you expect to give evidence at the inquiry?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="inquiry-number-of-witnesses"
                            name="inquiryNumberOfWitnessesInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /inquiry/witnesses/change should re-render the change expected number of witnesses page with the expected error message if "inquiryNumberOfWitnessesInput" text input is greater than 99 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inquiry-number-of-witnesses-input">Expected number of witnesses must be a number between 0 and 99</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="inquiry-number-of-witnesses"> How many witnesses would you expect to give evidence at the inquiry?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="inquiry-number-of-witnesses"
                            name="inquiryNumberOfWitnessesInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /inquiry/witnesses/change should re-render the change expected number of witnesses page with the expected error message if "inquiryNumberOfWitnessesInput" text input is less than 0 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inquiry-number-of-witnesses-input">Expected number of witnesses must be a number between 0 and 99</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="inquiry-number-of-witnesses"> How many witnesses would you expect to give evidence at the inquiry?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="inquiry-number-of-witnesses"
                            name="inquiryNumberOfWitnessesInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`procedure-preference POST /inquiry/witnesses/change should re-render the change expected number of witnesses page with the expected error message if "inquiryNumberOfWitnessesInput" text input is non-numeric 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inquiry-number-of-witnesses-input">Expected number of witnesses must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="inquiry-number-of-witnesses"> How many witnesses would you expect to give evidence at the inquiry?</label></h1>
                            <input class="govuk-input govuk-input--width-2" id="inquiry-number-of-witnesses"
                            name="inquiryNumberOfWitnessesInput" type="text" value="Not answered">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
